@@ -84,7 +84,6 @@ dependencies {
 	testImplementation('org.projectlombok:lombok:1.18.32')
 	testAnnotationProcessor('org.projectlombok:lombok:1.18.32')
 	implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.33'
-
 	testImplementation group: 'org.mockito', name: 'mockito-core', version: '3.12.4'
 	testImplementation group: 'org.powermock', name: 'powermock-api-mockito2', version: '2.0.9'
 	testImplementation group: 'org.powermock', name: 'powermock-module-junit4', version: '2.0.9'
@@ -115,6 +114,10 @@ test {
 		destinationFile = file("$buildDir/jacoco/jacocoTest.exec")
 		classDumpDir = file("$buildDir/jacoco/classpathdumps")
 	}
+}
+
+test{
+	jvmArgs "-Dnet.bytebuddy.experimental=true"
 }
 
 jacocoTestReport {
